--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
   "plugins": ["import"],
-  "extends": ["plugin:import/recommended"]
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off",
+    "allowRedefinitonOfConstants": "off"
+  }
 }
